v0.1.0 - improved usability with kotlin dsl